--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,12 @@
 /lib/
 /EntJavaprojectspocketedDayslogs/
 
+# Resources
+resources/client_secret_472113439088-4rjgd1mija43favjf1h6d63odmujcf50.apps.googleusercontent.com.json
+resources/gmail.properties
+resources/hibernate.cfg.xml
+resources/cognito.properties
+
 # mpeltonen/sbt-idea plugin
 .idea_modules/
 
