--- a/.gitignore
+++ b/.gitignore
@@ -38,10 +38,10 @@
 /EntJavaprojectspocketedDayslogs/
 
 # Resources
-resources/client_secret_472113439088-4rjgd1mija43favjf1h6d63odmujcf50.apps.googleusercontent.com.json
-resources/gmail.properties
-resources/hibernate.cfg.xml
-resources/cognito.properties
+src/main/resources/client_secret_472113439088-4rjgd1mija43favjf1h6d63odmujcf50.apps.googleusercontent.com.json
+src/main/resources/gmail.properties
+src/main/resources/hibernate.cfg.xml
+src/main/resources/cognito.properties
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
