--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ src/main/resources/client_secret_472113439088-4rjgd1mija43favjf1h6d63odmujcf50.a
 src/main/resources/gmail.properties
 src/main/resources/cognito.properties
 src/main/resources/hibernate.cfg.xml
+src/main/.platform
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
